# PositronEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  start_up.sh
PositronEngineCore/: CMakeLists.txt
PositronEngineCore/includes/PositronEngineCore/: Application.hpp  Camera.hpp  CubeMap.hpp  CubeMapTexture.hpp  Event.hpp  FrameBuffer.hpp  GameObject.hpp  Input.hpp  KeyCode.hpp  LightMaterial.hpp  LightObject.hpp  LightTypeCounter.hpp  Log.hpp  Material.hpp  Mesh.hpp  Planet.hpp  RenderBuffer.hpp  RenderOpenGL.hpp  Scene.hpp  ShaderProgram.hpp  Star.hpp  Texture2D.hpp  VertexArray.hpp  VertexBuffer.hpp  stb_image.h
PositronEngineCore/includes/PositronEngineCore/LightSources/: DirectionLight.hpp  PointLight.hpp  SpotLight.hpp
PositronEngineCore/includes/PositronEngineCore/Primitives/: CubePrimitive.hpp  Model.hpp  PlatePrimitive.hpp  SpherePrimitive.hpp
PositronEngineCore/includes/PositroneEngineCore/: Application.hpp
PositronEngineCore/includes/PositroneEngineCore/Utilis/: positron.hpp
PositronEngineCore/src/PositronEngineCore/: Application.cpp  Camera.cpp  CubeMap.cpp  GameObject.cpp  Input.cpp  LightMaterial.cpp  LightObject.cpp  LightTypeCounter.cpp  Material.cpp  Mesh.cpp  Scene.cpp  Window.cpp  Window.hpp  stb.cpp
PositronEngineCore/src/PositronEngineCore/LightSources/: DirectionLight.cpp  PointLight.cpp  SpotLight.cpp
PositronEngineCore/src/PositronEngineCore/Modules/: GUImodule.cpp  GUImodule.hpp
PositronEngineCore/src/PositronEngineCore/Primitives/: CubePrimitive.cpp  Model.cpp  PlatePrimitive.cpp  SpherePrimitive.cpp
PositronEngineCore/src/PositronEngineCore/Rendering/OpenGL/: Bmp.cpp  CubeMapTexture.cpp  FrameBuffer.cpp  IndexBuffer.cpp  IndexBuffer.hpp  Planet.cpp  Planet.hpp  RenderBuffer.cpp  RenderOpenGL.cpp  RenderOpenGL.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Sphere.cpp  Star.cpp  Star.hpp  Texture2D.cpp  Texture2D.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
PositronEngineCore/src/PositronEngineCore/Utilis/: positron.cpp
PositronEngineEditor/: CMakeLists.txt
PositronEngineEditor/src/: main.cpp
ResourceFiles/Models/BACKGROUND NIGHT BUILDING SKYLINE/SOURCE/: Background Buildings.mtl
ResourceFiles/Models/fallout/: license.txt  scene.gltf
ResourceFiles/Models/vr_room_-_art_gallery/: license.txt  scene.gltf
ResourceFiles/Models/yorha_number_2_type_b/: license.txt  scene.gltf
ResourceFiles/Shaders/: default.frag  default.geom  default.vert  gaussian_blur.frag  light.frag  light.vert  no_atphmos.frag  no_atphmos.vert  planet_shader.frag  planet_shader.vert  post_processing.frag  post_processing.vert  shadow_cube_map.frag  shadow_cube_map.geom  shadow_map.vert  skybox.frag  skybox.vert  with_atphmos.frag
Tests/: CMakeLists.txt  core_tests.cpp
cmake/: EnableCMP0048.cmake
submodules/glad/include/glad/: glad.h
submodules/glad/src/: glad.c
subproj/: CMakeLists.txt
